--- a/hg/.hgrc
+++ b/hg/.hgrc
@@ -1,3 +1,5 @@
+[ui]
+username = Sergey Trofimov <sarg@sarg.org.ru>
 #[alias]
 #purge = !$HG status --no-status --unknown -0 | xargs -0 rm 
 [extensions]
