hack font submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "awesome/.config/awesome/redshift"]
 	path = awesome/.config/awesome/redshift
 	url = git://github.com/YoRyan/awesome-redshift.git
+[submodule "Hack"]
+	path = Hack
+	url = git@github.com:chrissimpkins/Hack.git
