--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ awesome/.config/awesome/themes/
 awesome/.config/awesome/hints/
 awesome/.config/awesome/redshift/
 fonts/.local
+bootstrap.sh
 xmonad/.xmonad/xmonad*
 !xmonad/.xmonad/xmonad.hs
