--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ awesome/.config/awesome/hints/
 awesome/.config/awesome/redshift/
 fonts/.local
 bootstrap.sh
+rawdog/
 xmonad/.xmonad/xmonad*
 !xmonad/.xmonad/xmonad.hs
