--- a/vim/.pentadactylrc
+++ b/vim/.pentadactylrc
@@ -19,4 +19,8 @@ nmap <Space>bp :tabprev<CR>
 nmap <Space>bm :winonly<CR>
 nmap <Space>bd :tabclose<CR>
 
+command proxy -nargs=1 :set! network.proxy.type=<args>
+nmap up :proxy 1<CR>
+nmap np :proxy 0<CR>
+
 imap <C-m> <CR>
