--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -463,6 +463,15 @@ open-editor
 insert-text {primary}
     <shift-ins>
 
+fake-key <Tab>
+    <ctrl-i>
+
+fake-key <Down>
+    <ctrl-n>
+
+fake-key <Up>
+    <ctrl-p>
+
 fake-key <Home>
     <ctrl-a>
 
