qute config fixes

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -443,11 +443,11 @@ follow-selected -t
 repeat-command
     .
 
+# run-macro
+#     @
+
 # record-macro
 #     q
-
-run-macro
-    @
 
 [insert]
 # Keybindings for insert mode.
