--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -329,7 +329,7 @@ frame-flattening = false
 user-stylesheet = 
 hide-scrollbar = true
 css-media-type = 
-smooth-scrolling = false
+smooth-scrolling = true
 remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
@@ -681,14 +681,14 @@ background-tabs = false
 select-on-remove = next
 new-tab-position = next
 new-tab-position-explicit = last
-last-close = ignore
-show = always
+last-close = default-page
+show = switching
 show-switching-delay = 800
 wrap = true
 movable = true
 close-mouse-button = middle
-position = top
-show-favicons = true
+position = left
+show-favicons = false
 width = 20%
 indicator-width = 3
 tabs-are-windows = false
@@ -937,7 +937,7 @@ cookies-store = true
 host-block-lists = https://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 host-blocking-enabled = true
 host-blocking-whitelist = piwik.org
-enable-pdfjs = false
+enable-pdfjs = true
 
 [hints]
 # Hinting settings.
@@ -1039,6 +1039,8 @@ hide-unmatched-rapid-hints = true
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 DEFAULT = https://duckduckgo.com/?q={}
+gh = https://github.com/search?utf8=✓&q={}
+gg = http://www.google.ru/search?hl=ru&q={}
 
 [aliases]
 # Aliases for commands.
