unbind macro recording

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -443,11 +443,9 @@ follow-selected -t
 repeat-command
     .
 
-# run-macro
-#     @
-
-# record-macro
-#     q
+<unbound>
+    q
+    @
 
 [insert]
 # Keybindings for insert mode.
