--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -937,7 +937,7 @@ cookies-store = true
 host-block-lists = https://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 host-blocking-enabled = true
 host-blocking-whitelist = piwik.org
-enable-pdfjs = true
+enable-pdfjs = false
 
 [hints]
 # Hinting settings.
