fix github search for qute

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -182,11 +182,11 @@ auto-save-interval = 15000
 editor = emacsclient -c "{}"
 editor-encoding = utf-8
 private-browsing = false
-developer-extras = false
+developer-extras = true
 print-element-backgrounds = true
 xss-auditing = false
 site-specific-quirks = true
-default-encoding = 
+default-encoding = utf-8
 new-instance-open-target = tab
 new-instance-open-target.window = last-focused
 log-javascript-console = debug
@@ -1039,7 +1039,7 @@ hide-unmatched-rapid-hints = true
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 DEFAULT = https://duckduckgo.com/?q={}
-gh = https://github.com/search?utf8=✓&type=Commits&q={}
+gh = https://github.com/search?utf8=✓&type=Code&q={}
 gg = http://www.google.ru/search?hl=ru&q={}
 
 [aliases]
