update qute bindings

--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -47,7 +47,7 @@ leave-mode
 [normal]
 # Keybindings for normal mode.
 
-clear-keychain ;; search
+clear-keychain ;; search ;; fullscreen --leave
     <escape>
 
 set-cmd-text -s :open
@@ -154,14 +154,12 @@ fullscreen
 hint
     f
 
-hint all tab
+hint all tab-bg
     F
+    ;b
 
 hint all window
     wf
-
-hint all tab-bg
-    ;b
 
 hint all tab-fg
     ;f
