--- a/peru.yaml
+++ b/peru.yaml
@@ -2,6 +2,7 @@ imports:
   awesome-brown-theme: awesome/.config/awesome/themes
   awesome-redshift: awesome/.config/awesome/redshift
   font-pomicons: fonts/.local/share
+  font-firacode: fonts/.local/share/fonts
 #  font-hack: fonts/.local/share/fonts
   antigen: antigen
   awesome-hints: awesome/.config/awesome/hints
@@ -18,6 +19,12 @@ git module font-pomicons:
   reup: master
   pick: fonts
   rev: bb0a57947c4a78b3d4afa8d483a58fdcb8d1fb1b
+
+git module font-firacode:
+  url: https://github.com/tonsky/FiraCode.git
+  reup: master
+  export: distr/ttf
+  rev: c9813e2a4a84c6db880d0c7d55cb9b232c1da75e
 
 #git module font-hack:
 #  url: https://github.com/chrissimpkins/Hack
@@ -43,4 +50,4 @@ git module awesome-hints:
 git module spacemacs:
   url: https://github.com/syl20bnr/spacemacs
   reup: develop
-  rev: 3072e7277340f1111bbeeed19f3e834bc05513e7
+  rev: 165b4b425f45c8184553b47176cc02788bafad68
