--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -330,10 +330,10 @@ user-stylesheet =
 hide-scrollbar = true
 css-media-type = 
 smooth-scrolling = true
-remove-finished-downloads = -1
+remove-finished-downloads = 15000
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
-window-title-format = {perc}{title}{title_sep}qutebrowser
+window-title-format = {perc}{title}
 modal-js-dialog = false
 hide-wayland-decoration = false
 keyhint-blacklist = 
@@ -545,7 +545,7 @@ auto-leave-insert-mode = true
 auto-insert-mode = false
 forward-unbound-keys = auto
 spatial-navigation = false
-links-included-in-focus-chain = true
+links-included-in-focus-chain = false
 rocker-gestures = false
 mouse-zoom-divider = 512
 
@@ -677,7 +677,7 @@ mouse-zoom-divider = 512
 # indicator-padding (Padding):
 #     Padding for indicators (top, bottom, left, right).
 #     Default: 2,2,0,4
-background-tabs = false
+background-tabs = true
 select-on-remove = next
 new-tab-position = next
 new-tab-position-explicit = last
@@ -689,7 +689,7 @@ movable = true
 close-mouse-button = middle
 position = left
 show-favicons = false
-width = 20%
+width = 30%
 indicator-width = 3
 tabs-are-windows = false
 title-format = {index}: {title}
@@ -1369,11 +1369,11 @@ gg = http://www.google.ru/search?hl=ru&q={}
 # prompts.selected.bg (QssColor):
 #     Background color for the selected item in filename prompts.
 #     Default: #308cc6
-completion.fg = white
-completion.bg = #333333
-completion.alternate-bg = #444444
-completion.category.fg = white
-completion.category.bg = qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #888888, stop:1 #505050)
+completion.fg = #333333
+completion.bg = white
+completion.alternate-bg = white
+completion.category.fg = #444444
+completion.category.bg = yellow
 completion.category.border.top = black
 completion.category.border.bottom = ${completion.category.border.top}
 completion.item.selected.fg = black
@@ -1383,8 +1383,8 @@ completion.item.selected.border.bottom = ${completion.item.selected.border.top}
 completion.match.fg = #ff4444
 completion.scrollbar.fg = ${completion.fg}
 completion.scrollbar.bg = ${completion.bg}
-statusbar.fg = white
-statusbar.bg = black
+statusbar.fg = black
+statusbar.bg = #f0f0f0
 statusbar.fg.insert = ${statusbar.fg}
 statusbar.bg.insert = darkgreen
 statusbar.fg.command = ${statusbar.fg}
@@ -1393,22 +1393,22 @@ statusbar.fg.caret = ${statusbar.fg}
 statusbar.bg.caret = purple
 statusbar.fg.caret-selection = ${statusbar.fg}
 statusbar.bg.caret-selection = #a12dff
-statusbar.progress.bg = white
+statusbar.progress.bg = magenta
 statusbar.url.fg = ${statusbar.fg}
-statusbar.url.fg.success = white
-statusbar.url.fg.success.https = lime
+statusbar.url.fg.success = black
+statusbar.url.fg.success.https = darkgreen
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
-statusbar.url.fg.hover = aqua
-tabs.fg.odd = white
-tabs.bg.odd = grey
-tabs.fg.even = white
-tabs.bg.even = darkgrey
-tabs.fg.selected.odd = white
-tabs.bg.selected.odd = black
+statusbar.url.fg.hover = blue
+tabs.fg.odd = black
+tabs.bg.odd = #b0b0b0
+tabs.fg.even = black
+tabs.bg.even = #a0a0a0
+tabs.fg.selected.odd = blue
+tabs.bg.selected.odd = white
 tabs.fg.selected.even = ${tabs.fg.selected.odd}
 tabs.bg.selected.even = ${tabs.bg.selected.odd}
-tabs.bg.bar = #555555
+tabs.bg.bar = #f0f0f0
 tabs.indicator.start = #0000aa
 tabs.indicator.stop = #00aa00
 tabs.indicator.error = #ff0000
@@ -1541,11 +1541,11 @@ prompts.selected.bg = #308cc6
 # prompts (Font):
 #     Font used for prompts.
 #     Default: 8pt sans-serif
-_monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier, "Liberation Mono", monospace, Fixed, Consolas, Terminal
-completion = 8pt ${_monospace}
+_monospace = "Fira Code", Terminus, Fixed
+completion = 10pt ${_monospace}
 completion.category = bold ${completion}
-tabbar = 8pt ${_monospace}
-statusbar = 8pt ${_monospace}
+tabbar = 12pt ${_monospace}
+statusbar = 12pt ${_monospace}
 downloads = 8pt ${_monospace}
 hints = bold 13px ${_monospace}
 debug-console = 8pt ${_monospace}
@@ -1563,4 +1563,4 @@ keyhint = 8pt ${_monospace}
 messages.error = 8pt ${_monospace}
 messages.warning = 8pt ${_monospace}
 messages.info = 8pt ${_monospace}
-prompts = 8pt sans-serif
+prompts = 12pt sans-serif
