added steve pavlina to rss digest

--- a/rawdog/.rawdog/config
+++ b/rawdog/.rawdog/config
@@ -294,3 +294,4 @@ feed 3h http://www.daemonology.net/hn-daily/index.rss
 feed 3h http://ru-healthlife.livejournal.com/data/rss
 feed 3h http://hranidengi.ru/feed/
 feed 3h http://feeds.feedburner.com/codinghorror/
+feed 3h https://www.stevepavlina.com/feed/
