tyrannical and collision for awesome

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 config/*
 .peru/
 awesome/.config/awesome/themes/
-awesome/.config/awesome/hints/
+awesome/.config/awesome/tyrannical/
+awesome/.config/awesome/collision/
 awesome/.config/awesome/redshift/
 vim/.emacs.d
 fonts/.local
