--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -333,7 +333,7 @@ smooth-scrolling = true
 remove-finished-downloads = 15000
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
-window-title-format = {perc}{title}
+window-title-format = {title}
 modal-js-dialog = false
 hide-wayland-decoration = false
 keyhint-blacklist = 
