--- a/qutebrowser/.config/qutebrowser/keys.conf
+++ b/qutebrowser/.config/qutebrowser/keys.conf
@@ -451,6 +451,15 @@ repeat-command
     q
     @
 
+wq
+    ZZ
+
+tab-focus -1
+    g$
+
+tab-pin
+    <ctrl-p>
+
 [insert]
 # Keybindings for insert mode.
 # Since normal keypresses are passed through, only special keys are
