--- a/awesome/.xsessionrc
+++ b/awesome/.xsessionrc
@@ -2,5 +2,5 @@
 # export SSH_AUTH_SOCK
 # export NO_AT_BRIDGE=1
 # export QT_GRAPHICSSYSTEM=native
-source ~/.zshenv
+. ~/.zshenv
 ./.local/bin/keymap.sh 
