--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -360,7 +360,7 @@ do-not-track = true
 # accept-language (String):
 #     Value to send in the `accept-language` header.
 #     Default: en-US,en
-accept-language = en-US,en
+accept-language = en-gb,en
 
 # referer-header (String):
 #     Send the Referer header
@@ -1050,6 +1050,7 @@ gg = http://www.google.ru/search?hl=ru&q={}
 # `:qtb` to open qutebrowsers website:
 # `qtb = open https://www.qutebrowser.org/`
 [aliases]
+mpv = spawn -u view_in_mpv
 
 
 # Colors used in the UI.
