--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,10 +32,11 @@
 	default = simple
 
 [sendemail]
-    smtpEncryption = tls
-    smtpServer = smtp.gmail.com
-    smtpUser = sarg@sarg.org.ru
-    smtpServerPort = 587
+    smtpserver = /usr/bin/msmtp
+    # smtpEncryption = tls
+    # smtpServer = smtp.gmail.com
+    # smtpUser = sarg@sarg.org.ru
+    # smtpServerPort = 587
 
 [core]
 	#autocrlf = input
