--- a/peru.yaml
+++ b/peru.yaml
@@ -7,6 +7,7 @@ imports:
   # font-firacode: fonts/.local/share/fonts
   # font-hack: fonts/.local/share/fonts
   # spacemacs: vim/.emacs.d
+  font-tufte: fonts/.local/share/fonts
   doom: emacs/.emacs.d
   oh-my-zsh: oh-my-zsh
 
@@ -54,11 +55,17 @@ imports:
 #   reup: develop
 #   rev: 0fa3658cd8e283825dcd0a54ce1579dec55eb568
 
+git module font-tufte:
+  url: https://github.com/edwardtufte/et-book
+  reup: gh-pages
+  export: et-book
+  rev: 24d3a3bbfc880095d3df2b9e9d60d05819138e89
+
 git module doom:
   url: https://github.com/hlissner/doom-emacs
   reup: develop
-  rev: 21883d9700707b3a4bc4518f61e70691edc6e2de
+  rev: 89242f83d2c6bbba969f868af6db12931a7aa581
 
 git module oh-my-zsh:
   url: https://github.com/robbyrussell/oh-my-zsh.git
-  rev: 9524db7398f405b26091f58fa8e2125d4e440a24
+  rev: f9e7c45a484723f693a77ab6128a1cc163f3704a
