Fix posframe positioning.

--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -5,38 +5,29 @@ foreground = #dfdfdf
 foreground-alt = #555
 primary = #ffb52a
 secondary = #e60053
-alert = #bd2c40
 underline-1 = #89AAEB
-
-[module/exwm]
-type = custom/script
-exec = tail -F /tmp/exwm.workspace
-tail = true
-format-underline = ${colors.underline-1}
-format-background = ${colors.background-alt}
-format-padding = 1
 
 [module/datetime]
 type = internal/date
 interval = 1.0
-
 date = "%Y-%m-%d%"
 time = "%H:%M"
-
 label = "%date% - %time%"
+format-padding = 0
+
+label-padding = 4
 
 [module/battery]
 type = internal/battery
 battery = BAT0
 adapter = AC
 full-at = 98
-time-format = %-l:%M
 
-label-charging = %percentage%% / %time%
+label-charging = %percentage%%
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = ${colors.underline-1}
 
-label-discharging = %percentage%% / %time%
+label-discharging = %percentage%%
 format-discharging = <ramp-capacity> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
@@ -56,6 +47,21 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 750
 
+
+[module/ewmh]
+type = internal/xworkspaces
+#pin-workspaces = true
+enable-click = false
+enable-scroll = false
+label-active = "%name%"
+label-empty = "%name%"
+label-active-foreground = #ffffff
+label-occupied-foreground = #555555
+label-empty-foreground = #999999
+label-active-padding = 1
+label-occupied-padding = 1
+label-empty-padding = 1
+
 [bar/panel]
 width = 100%
 height = 24
@@ -66,8 +72,8 @@ enable-ipc = true
 
 tray-position = right
 
-font-0 = "Font Awesome:size=10;4"
-font-1 = "Fira Mono:size=10;2"
+font-0 = "Font Awesome:size=10;3"
+font-1 = "Terminus:size=10;2"
 
-modules-left = exwm
+modules-left = ewmh
 modules-right = battery datetime
