Get rid of statusbar.

--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -55,8 +55,9 @@ enable-click = false
 enable-scroll = false
 label-active = "%name%"
 label-empty = "%name%"
+label-occupied = "%name%"
 label-active-foreground = #ffffff
-label-occupied-foreground = #555555
+label-occupied-foreground = #999999
 label-empty-foreground = #999999
 label-active-padding = 1
 label-occupied-padding = 1
