--- a/xsession/.config/polybar.conf
+++ b/xsession/.config/polybar.conf
@@ -14,8 +14,15 @@ date = "%Y-%m-%d%"
 time = "%H:%M"
 label = "%date% - %time%"
 format-padding = 0
+label-padding = 1
 
-label-padding = 4
+[module/wireless-network]
+type = internal/network
+interface = wlp3s0
+label-connected = 📶
+label-disconnected = ⊘
+label-connected-padding = 1
+label-disconnected-padding = 1
 
 [module/battery]
 type = internal/battery
@@ -73,8 +80,9 @@ enable-ipc = true
 
 tray-position = right
 
-font-0 = "Font Awesome:size=10;3"
-font-1 = "Terminus:size=10;2"
+font-0 = "Terminus:style=Regular"
+font-1 = "FontAwesome:style=Regular"
+font-2 = "Symbola:style=Regular"
 
 modules-left = ewmh
-modules-right = battery datetime
+modules-right = wireless-network battery datetime
